<resources>
    <string name="app_name">ProjetService</string>
    <string name="shr_hint_username">Utilisateur</string>
    <string name="shr_hint_password">Mot de Passe</string>
    <string name="DodoService">Dodo Service</string>
    <string name="seConnecter">Se connecter</string>
    <string name="inscription">S\'inscrire</string>
    <string name="inviter">Continer en tant \n qu\'invité</string>
    <string name="mail">Adresse mail</string>
    <string name="annuler">Annuler</string>
    <string name="client">Client</string>
    <string name="fournisseur">Fournisseur</string>


    <string-array name="clientfournisseur">
        <item>@string/fournisseur</item>
        <item>@string/client</item>

    </string-array>
    <string name="title_activity_recherche">Dodo Service</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="rechercher">Rechercher...</string>
    <string name="false_user">Identifiant ou mot de passe erroné</string>
    <string name="alreadyExist">Pseudo déjà utilisé</string>
    <string name="inscriptionValide">Inscription éffectuée en tant que </string>
    <string name="goodUser">Connexion valide</string>
    <string name="retour">Retour</string>
    <string name="profil">Profil</string>
    <string name="Modifier">Modifier</string>
    <string name="erreur_donnees_user">une erreur est survenue, vous avez été déconnecté</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="monservice">Mon Service</string>
    <string name="noservice">Aucun service lié à ce compte</string>
    <string name="creerservice">Créer mon Service</string>
    <string name="descriptionfMonService">Aucun service n\'a encore été crée</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="option">Option</string>
    <string name="menu">Menu</string>
    <string name="recherche">Recherche</string>
    <string name="accueil">Accueil Fournisseur</string>
    <string name="creation_de_votre_service">Creation de votre service</string>
    <string name="creer_le_service">créer le service</string>
    <string name="modifier_le_service">modifier votre service</string>
    <string name="suppr_le_service">supprimer votre service</string>
    <string name="votre_service">Votre Service</string>
    <string name="service_existant">service existant</string>
    <string name="NonRenseigner">Non rensigné</string>
    <string name="btnModifService">Modifier votre service</string>
    <string name="lundi">lundi</string>
    <string name="mardi">mardi</string>
    <string name="mercredi">mercredi</string>
    <string name="jeudi">jeudi</string>
    <string name="vendredi">vendredi</string>
    <string name="samedi">samedi</string>
    <string name="dimanche">dimanche</string>
    <string name="NonDisponible">Non Disponible</string>
    <string name="disponible">Disponible</string>
    <string name="description">Description:</string>
    <string name="pas_de_description">pas de description..</string>
    <string name="reserver_un_cr_neau">Reservez un créneau parmit ceux disponibles</string>
    <string name="oui">oui</string>
    <string name="votre_Profil">Votre Profil</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prenom :</string>
    <string name="pseudo">Pseudo :</string>
    <string name="email">Email :</string>
    <string name="non_renseign">non renseigné</string>
    <string name="modifier_votre_profil">Modifier votre Profil</string>
    <string name="valider_les_modification">Valider les Modification</string>
    <string name="modifier_le_profil">Modifier le profil</string>
    <string name="annuler_les_modification">Annuler les modifications</string>
</resources>