<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ServiceViewClient"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/appbarlayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"


            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </LinearLayout>

        <androidx.core.widget.NestedScrollView

            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".Activity.MonService"
            tools:showIn="@layout/activity_mon_service">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <TextView
                    android:textColor="@color/purple_500"
                    android:background="@color/purple_50"
                    android:id="@+id/nomServiceClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_horizontal"

                    android:text="Service"

                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/auteurServiceClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="8dp"
                    android:gravity="center_horizontal"

                    android:text="auteur"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/villeServiceClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:text="Ville"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/descTitleServiceClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="start"
                    android:text="@string/description"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/descServiceClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="start"
                    android:text="@string/pas_de_description"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/reservationTitleServiceClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="start"
                    android:text="@string/reserver_un_cr_neau"
                    android:textSize="20sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"

                    >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/lundiReservation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/lundi" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mardiReservation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/mardi" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mercrediReservation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/mercredi" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/jeudiReservation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/jeudi" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/vendrediReservation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/vendredi" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/samediReservation"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/samedi" />
                </TableRow>
                </TableLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/dimancheReservation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_span="1"
                        android:enabled="false"

                        android:text="@string/dimanche"

                        />
                </LinearLayout>

                <!--style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->


                <!--                android:clickable="false"-->


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
     <include layout="@layout/nav_view" />
</androidx.drawerlayout.widget.DrawerLayout>